tests/positive/basic/indexof_prefix/input.ci
void main() {
    print(toString(indexOf("alpha", "al")) + "\n");
}
