tests/negative/semantic/wrong_arg_count_indexof/input.ci
void main() {
    print(toString(indexOf("a")) + "\n");
}
